// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-modal> Component <bolt-modal> slots 1`] = `
<bolt-modal width="regular"
            uuid="12345"
>
  <bolt-text slot="header">
    Header slot
  </bolt-text>
  Default slot
  <bolt-text slot="footer">
    Footer slot
  </bolt-text>
</bolt-modal>
`;

exports[`<bolt-modal> Component Long content usage <bolt-modal> at various viewport sizes 1`] = `
<bolt-modal width="regular"
            uuid="12345"
>
  Long content.
  <bolt-image src="/fixtures/1200x2500.jpg"
              alt="Placeholder"
  >
  </bolt-image>
</bolt-modal>
`;

exports[`<bolt-modal> Component Long content usage <bolt-modal> w/o Shadow DOM renders 3`] = `
<bolt-modal
  ready=""
  style=""
  uuid="12345"
  width="regular"
>
  <!---->
  
      
      
  <div
    aria-hidden="true"
    class="c-bolt-modal c-bolt-modal--scroll-container c-bolt-modal--overlay-dark"
    style=""
  >
    
        
    <!---->
    <!---->
    
        
    <focus-trap
      style=""
    >
      
          
      <dialog
        aria-hidden="true"
        aria-labelledby="dialog-title-12345"
        class="c-bolt-modal__content c-bolt-modal__content--width-regular"
        style=""
      >
        
            
        <article
          class="c-bolt-modal__container c-bolt-modal__container--spacing-medium t-bolt-xlight"
          style=""
        >
          
              
          <div
            class="c-bolt-modal__close-button c-bolt-modal__close-button--light"
            style=""
          >
            
                
      
            <bolt-trigger
              autofocus=""
              class="js-close-button-fallback"
              display="block"
              no-outline=""
              style=""
              tabindex="0"
            >
              
        
              <span
                class="c-bolt-modal__close-button__text"
                style=""
              >
                Close this dialog window
              </span>
              
        
              <span
                class="c-bolt-modal__close-button__icon"
                style=""
              />
              
      
            </bolt-trigger>
            
    
              
          </div>
          
              
          <header
            class="c-bolt-modal__container-header c-bolt-modal__container-header--hidden"
            style=""
          >
            
                
            <h1
              class="c-bolt-modal__dialog-title"
              id="dialog-title-12345"
              style=""
            >
              
                  Dialog content
                
            </h1>
            
                
            <!---->
            <!---->
            
              
          </header>
          
              
          <div
            class="c-bolt-modal__container-body"
            style=""
          >
            
                
            <!---->
            <!---->
            Long content. 
            <!---->
            <bolt-image
              alt="Placeholder"
              class="is-first-child is-last-child"
              src="/fixtures/1200x2500.jpg"
              style=""
            />
            <!---->
            <!---->
            
              
          </div>
          
              
            
        </article>
        
          
      </dialog>
      
        
    </focus-trap>
    
      
  </div>
  
    
  <!---->
</bolt-modal>
`;

exports[`<bolt-modal> Component Long content usage <bolt-modal> with Shadow DOM renders 3`] = `
<bolt-modal
  ready=""
  style=""
  uuid="12345"
  width="regular"
>
  Long content. 
  <bolt-image
    alt="Placeholder"
    class="is-first-child is-last-child"
    src="/fixtures/1200x2500.jpg"
    style=""
  />
</bolt-modal>
`;

exports[`<bolt-modal> Component Long content usage<bolt-modal> with band at various viewport sizes 1`] = `
<bolt-modal width="regular"
            uuid="12345"
>
  <bolt-band tag="div"
             size="medium"
             theme="none"
  >
    <div class="c-bolt-band c-bolt-band--medium">
      <div class="c-bolt-band__content">
        <bolt-wrapper size="xxlarge"
                      full="true"
                      bolt-object
        >
          <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
            Long content.
            <bolt-image src="/fixtures/1200x2500.jpg"
                        alt="Placeholder"
            >
            </bolt-image>
          </div>
        </bolt-wrapper>
      </div>
    </div>
  </bolt-band>
</bolt-modal>
`;

exports[`<bolt-modal> Component Simple usage <bolt-modal> at various viewport sizes 1`] = `
<bolt-modal width="regular"
            uuid="12345"
>
  Modal body slot
</bolt-modal>
`;

exports[`<bolt-modal> Component Simple usage <bolt-modal> w/o Shadow DOM renders 3`] = `
<bolt-modal
  ready=""
  style=""
  uuid="12345"
  width="regular"
>
  <!---->
  
      
      
  <div
    aria-hidden="true"
    class="c-bolt-modal c-bolt-modal--scroll-container c-bolt-modal--overlay-dark"
    style=""
  >
    
        
    <!---->
    <!---->
    
        
    <focus-trap
      style=""
    >
      
          
      <dialog
        aria-hidden="true"
        aria-labelledby="dialog-title-12345"
        class="c-bolt-modal__content c-bolt-modal__content--width-regular"
        style=""
      >
        
            
        <article
          class="c-bolt-modal__container c-bolt-modal__container--spacing-medium t-bolt-xlight"
          style=""
        >
          
              
          <div
            class="c-bolt-modal__close-button c-bolt-modal__close-button--light"
            style=""
          >
            
                
      
            <bolt-trigger
              autofocus=""
              class="js-close-button-fallback"
              display="block"
              no-outline=""
              style=""
              tabindex="0"
            >
              
        
              <span
                class="c-bolt-modal__close-button__text"
                style=""
              >
                Close this dialog window
              </span>
              
        
              <span
                class="c-bolt-modal__close-button__icon"
                style=""
              />
              
      
            </bolt-trigger>
            
    
              
          </div>
          
              
          <header
            class="c-bolt-modal__container-header c-bolt-modal__container-header--hidden"
            style=""
          >
            
                
            <h1
              class="c-bolt-modal__dialog-title"
              id="dialog-title-12345"
              style=""
            >
              
                  Dialog content
                
            </h1>
            
                
            <!---->
            <!---->
            
              
          </header>
          
              
          <div
            class="c-bolt-modal__container-body"
            style=""
          >
            
                
            <!---->
            <!---->
            Modal body slot
            <!---->
            <!---->
            
              
          </div>
          
              
            
        </article>
        
          
      </dialog>
      
        
    </focus-trap>
    
      
  </div>
  
    
  <!---->
</bolt-modal>
`;

exports[`<bolt-modal> Component Simple usage <bolt-modal> with Shadow DOM renders 3`] = `
<bolt-modal
  ready=""
  style=""
  uuid="12345"
  width="regular"
>
  Modal body slot
</bolt-modal>
`;

exports[`<bolt-modal> Component Simple usage<bolt-modal> with band at various viewport sizes 1`] = `
<bolt-modal width="regular"
            uuid="12345"
>
  <bolt-band tag="div"
             size="medium"
             theme="none"
  >
    <div class="c-bolt-band c-bolt-band--medium">
      <div class="c-bolt-band__content">
        <bolt-wrapper size="xxlarge"
                      full="true"
                      bolt-object
        >
          <div class="o-bolt-wrapper o-bolt-wrapper--xxlarge o-bolt-wrapper--full">
            Modal body slot
          </div>
        </bolt-wrapper>
      </div>
    </div>
  </bolt-band>
</bolt-modal>
`;

exports[`<bolt-modal> Component basic usage 1`] = `
<bolt-modal uuid="12345">
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal scroll: container 1`] = `
<bolt-modal scroll="container"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal scroll: overall 1`] = `
<bolt-modal scroll="overall"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal spacing: large 1`] = `
<bolt-modal spacing="large"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal spacing: medium 1`] = `
<bolt-modal spacing="medium"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal spacing: none 1`] = `
<bolt-modal spacing="none"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal spacing: small 1`] = `
<bolt-modal spacing="small"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal theme: dark 1`] = `
<bolt-modal theme="dark"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal theme: light 1`] = `
<bolt-modal theme="light"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal theme: none 1`] = `
<bolt-modal theme="none"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal theme: xdark 1`] = `
<bolt-modal theme="xdark"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal theme: xlight 1`] = `
<bolt-modal theme="xlight"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal width: auto 1`] = `
<bolt-modal width="auto"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal width: full 1`] = `
<bolt-modal width="full"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal width: optimal 1`] = `
<bolt-modal width="optimal"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;

exports[`<bolt-modal> Component modal width: regular 1`] = `
<bolt-modal width="regular"
            uuid="12345"
>
  This is a modal
</bolt-modal>
`;
